# litehouse

./: README.md  litehouse-install.bat  litehouse-start.bat  pyproject.toml
src/litehouse/: README.md  app.py  orgs.py  query.py  requirements.txt  run.py  utils.py
src/litehouse/static/: datatables.min.css  datatables.min.js  htmx.min.js
src/litehouse/templates/: base.jinja  close_alert.jinja  close_modal.js  copy_to_clipboard.js  filter_list.js  flash_messages.jinja  form_macros.jinja  orgs.jinja  orgs_delete_connection.jinja  orgs_refresh_connections.jinja  orgs_update_connection.jinja  query.jinja  query_data.jinja  query_data_refresh.jinja  query_entities.jinja  query_entity_fields.jinja  query_saved_queries.jinja  query_successful_save.jinja
